force-app/main/default/objects/ObjectNov24__c/ObjectNov24__c.object-meta.xml
<CustomObject>
    <label>ObjectNov24</label>
    <nameField>
        <label>CustomObjectNov24 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ObjectNov24s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>