force-app/main/default/objects/ObjectNov24__c/fields/ObjectNov24_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>ObjectNov24_Date_Time__c</fullName>
    <label>ObjectNov24 Date/Time</label>
    <type>DateTime</type>
</CustomField>