force-app/main/default/objects/ObjectNov24__c/fields/ObjectNov24_Number__c.field-meta.xml
<CustomField>
    <fullName>ObjectNov24_Number__c</fullName>
    <label>ObjectNov24 Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>