force-app/main/default/objects/ObjectNov24__c/fields/ObjectNov24_Text__c.field-meta.xml
<CustomField>
    <fullName>ObjectNov24_Text__c</fullName>
    <label>ObjectNov24 Text</label>
    <length>8</length>
    <type>Text</type>
</CustomField>