force-app/main/default/objects/ObjectNov24__c/fields/ObjectNov24_URL__c.field-meta.xml
<CustomField>
    <fullName>ObjectNov24_URL__c</fullName>
    <label>ObjectNov24 URL</label>
    <type>Url</type>
</CustomField>